--- a/nyc_yellow_taxi/models/model_properties.yml
+++ b/nyc_yellow_taxi/models/model_properties.yml
@@ -4,3 +4,12 @@ models:
   - name: taxi_rides_raw
     description: Initial import of the NYC Yellow Taxi trip data from Parquet source
     access: public
+    columns:
+      - name: fare_amount
+        tests:
+          - not_null
+      - name: payment_type
+        tests:
+          - not_null
+          - accepted_values:
+              values: [0, 1, 2, 3, 4, 5, 6]
