--- a/nyc_yellow_taxi/models/model_properties.yml
+++ b/nyc_yellow_taxi/models/model_properties.yml
@@ -12,4 +12,4 @@ models:
         tests:
           - not_null
           - accepted_values:
-              values: [0, 1, 2, 3, 4, 5, 6]
+              values: [1, 2, 3, 4, 5, 6]
