--- a/nyc_yellow_taxi/models/model_properties.yml
+++ b/nyc_yellow_taxi/models/model_properties.yml
@@ -8,8 +8,16 @@ models:
       - name: fare_amount
         tests:
           - not_null
+          - check_gt_0
       - name: payment_type
         tests:
           - not_null
           - accepted_values:
               values: [1, 2, 3, 4, 5, 6]
+      - name: total_amount
+        tests:
+          - check_gt_0
+      - name: tpep_pickup_datetime
+        tests:
+          - columns_equal:
+              column_name2: tpep_dropoff_datetime
